--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@actions/core": "^1.11.1",
     "axios": "^1.6.0",
-    "path": "^0.12.7",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
   }
 }
