Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "axios": "^1.6.0",
     "fs": "0.0.1-security",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.3"
   }
 }
