Add node-fetch dependency to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@actions/core": "^1.11.1",
     "axios": "^1.6.0",
     "fs": "0.0.1-security",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
