--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 name: 'Upload Artifact to Artim-CDN'
 description: 'Upload a file to Artim-Industries CDN'
 author: 'Mauritz Lemgen'
+icon: "blue"
+color: "upload-cloud"
 inputs:
   path:
     description: 'Path to file to upload'
